--- a/Renewal Process Uniform Distribution.ipynb
+++ b/Renewal Process Uniform Distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "60ebb5ea",
    "metadata": {},
    "outputs": [],
@@ -13,9 +13,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e31aede",
+   "metadata": {},
+   "source": [
+    "## Write Python ( or any other language ) program to simulate this behavior .\n",
+    "\n",
+    "1. Set Sum = 0\n",
+    "2. Set Count = 0\n",
+    "3. Generate random variable with U [0,1] = x\n",
+    "4. Sum = Sum + x\n",
+    "5. Count = Count + 1\n",
+    "6. If (Sum < 1), then Repeat Step 3\n",
+    "7. Keep Count value in list\n",
+    "8. Repeat 1 to 6 steps 10000 times\n",
+    "9. Find the average of Count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "e9ab77a9",
+   "execution_count": 2,
+   "id": "80f94f7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "50a199d4",
+   "execution_count": 3,
+   "id": "57635417",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.7173"
+       "2.7195"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,12 +77,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f129e034",
+   "metadata": {},
+   "source": [
+    "## Repeat the task for rolling a die"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32cddce3",
+   "execution_count": 4,
+   "id": "2826a3fe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = 0 #set sum = 0\n",
+    "count = 0 #set count = 0\n",
+    "countvec = [] #create a list to store values of counts\n",
+    "die_roll = [1,2,3,4,5,6] # sample space for rolling a die\n",
+    "for i in range(10000):# for every iteration set initial values\n",
+    "    x = random.sample(die_roll,1)\n",
+    "    s = 0\n",
+    "    count = 0\n",
+    "    while s < 6:# keep iterating till sum >= 1\n",
+    "        s += x[0]\n",
+    "        count += 1\n",
+    "        x = random.sample(die_roll,1)\n",
+    "    countvec.append(count) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e05998c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1609"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(countvec)/10000"
+   ]
   }
  ],
  "metadata": {
